--- a/musicbeats/templates/base.html
+++ b/musicbeats/templates/base.html
@@ -47,7 +47,7 @@
                         Welcome {{request.user}}
                         </button>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url "fav" %}">Favourites</a></li>
+                        <li><a class="dropdown-item" href="/">Favourites</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" id="logout-btn" href="{% url "logout" %}">Logout</a></li>
                         </ul>
