--- a/musicbeats/templates/base.html
+++ b/musicbeats/templates/base.html
@@ -47,7 +47,7 @@
                         Welcome {{request.user}}
                         </button>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/">Favourites</a></li>
+                        <li><a class="dropdown-item" href="{% url "fav" %}">Favourites</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" id="logout-btn" href="{% url "logout" %}">Logout</a></li>
                         </ul>
@@ -77,6 +77,9 @@
     {% endblock content %}
 
 
+   
+
+    
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"  integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
