--- a/musicbeats/templates/songs.html
+++ b/musicbeats/templates/songs.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="container">
-        {% for song in songs %}
+        {% for song in songs reversed %}
         <div class="card mb-3" style="max-width: 940px; padding-top:2%; padding-bottom:2%; padding-left:1%">
             <div class="row g-0">
             <div class="col-md-4">
