--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,87 @@
-@media (min-width: 992px) {
-    .offcanvas {
-      width: 50vw !important;
-    }
-  }
 
-  .offcanvas {
+
+/* notification css part */
+.notification{
+    position: fixed;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
-  }
-  
-  
+    padding: 10px 20px;
+    background-color: #bdc4d0;
+    font-weight: 600;
+    /* color: #fff; */
+    border-radius: 5px;
+    animation: slide-down 0.5s ease-in-out;
+    z-index: 9999;
+}
+.success{
+    color: green;
+}
+.error{
+    color: red;
+}
+.info{
+    color: rgb(0, 72, 255);
+}
+
+@media (max-width: 600px) {
+    .notification {
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        transform: none;
+    }
+}
+
+.notification .message {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.message {
+    font-size: 16px;
+}
+
+.notification .close {
+    display: inline-block;
+}
+
+.notification button {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 1px solid white;
+}
+
+.notification button:hover {
+    background-color: rgb(80, 179, 237);
+}
+
+@keyframes slide-down {
+    from {
+        opacity: 0;
+        top: -50px;
+    }
+
+    to {
+        opacity: 1;
+        top: 20px;
+    }
+}
+@keyframes slide-up {
+    from {
+        opacity: 1;
+        top: 20px;
+    }
+
+    to {
+        opacity: 0;
+        top: -50px;
+    }
+}
+
