--- a/musicbeats/templates/history.html
+++ b/musicbeats/templates/history.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Favourites{% endblock title %}
+{% block title %}History{% endblock title %}
 
 {% block content %}
     <h1 style="color:#2193b2;" class="text-center">History</h1>
