--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,3 +85,17 @@
     }
 }
 
+
+
+
+/* Logout message  */
+
+.logout-msg{
+    min-height: 120px;
+    margin-top: 5%;
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
