--- a/musicbeats/templates/index.html
+++ b/musicbeats/templates/index.html
@@ -6,27 +6,28 @@
 {% block content %}
     
     <!--             Background Image        -->
-    <div id="carouselExample" class="carousel slide">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="{% static "media/music.jpg" %}" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
             <img src="{% static "media/music.jpg" %}" class="d-block w-100" alt="image">
           </div>
           <div class="carousel-item">
-            <img src="{% static "media/music2.jpeg" %}" class="d-block w-100" alt="image">
-          </div>
-          <div class="carousel-item">
-            <img src="{% static "media/music3.avif" %}" class="d-block w-100" alt="image">
+            <img src="{% static "media/music.jpg" %}" class="d-block w-100" alt="image">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
 
       <!--                 Cards           -->
       <h2 style="padding-left: 7%; padding-top:2%">Trending songs</h2>
