--- a/musicbeats/templates/listne_song.html
+++ b/musicbeats/templates/listne_song.html
@@ -14,7 +14,7 @@
                 <h5 style='padding-top:1%'>Catagory: {{song.tags}}</h5>
                 <h5 style='padding-top:1%'>Movie: {{song.movie}}</h5>
                 <h5 style='padding-top:1%'>Singer: {{song.singer}}</h5>
-                <h5 style='padding-top:1%'>Credit: <a href="{{song.credit}}" target='blank_'>Click hear</a></h5>
+                {% comment %} <h5 style='padding-top:1%'>Credit: <a href="{{song.credit}}" target='blank_'>Click hear</a></h5> {% endcomment %}
 
                 <audio controls preload="auto" loop>
                     <source src="{% static song.song %}" srcset="">
