--- a/musicbeats/templates/login.html
+++ b/musicbeats/templates/login.html
@@ -2,19 +2,28 @@
 {% load static %}
 
 {% block title %}Login{% endblock title %}
+{% block css %}
+    <link rel="stylesheet" href="{% static "css/login.css" %}">
+{% endblock css %}
 
 {% block content %}
-    <div class="container my-4">
-        <form method='POST'>{% csrf_token %}
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Username</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" name="password" id="exampleInputPassword1">
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+    <div class="main-content">
+        <div class="bg-image"></div>
+        <div class="row my-4 rounded  d-block p-3">
+            <p class="text-center fw-bold fs-3">LOGIN</p>
+            <form method='POST'>{% csrf_token %}
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" name="password" id="exampleInputPassword1">
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <p style="text-align:end " class="fw-semibold"><a href="{% url "signup" %}" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Create an account</a></p>
+
+            </form>
+        </div>
     </div>
 {% endblock content %}
